opam-version: "2.0"
name: "soundtouch"
version: "0.1.8"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-soundtouch"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["soundtouch-dev"] {os-distribution = "alpine"}
  ["soundtouch-devel"] {os-distribution = "centos"}
  ["soundtouch-devel"] {os-distribution = "fedora"}
  ["soundtouch-devel"] {os-family = "suse"}
  ["libsoundtouch-dev"] {os-distribution = "debian"}
  ["libsoundtouch-dev"] {os-distribution = "ubuntu"}
  ["drfill/homebrew-liquidsoap/soundtouch"]
    {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-soundtouch/issues"
dev-repo: "git+https://github.com/savonet/ocaml-soundtouch.git"
synopsis:
  "Bindings for the soundtouch library which provides functions for changing pitch and timestretching audio data"
