(library
 (name soundtouch)
 (public_name soundtouch)
 (synopsis "OCaml bindings for soundtouch")
 (libraries unix)
 (foreign_stubs
  (extra_deps config.h)
  (language cxx)
  (names soundtouch_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets config.h c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
